<resources>
    <string name="app_name">Bloodshare10120908</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="connect_facebook">Connect With Facebook</string>
    <string name="to_register">doesn\'t have account ? <b>Register</b></string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="agreement">Agree with Terms and Condition</string>
    <string name="register">Register</string>
    <string name="almost_there">Almost There</string>
    <string name="almost_there_desc">Thank you for registering with us. One more\nstep, you need to check your email\nto activate your account</string>
    <string name="verify">Verify</string>
    <string name="verify_account">Verify your Account</string>
    <string name="verify_desc">We have send veriification code to your email</string>
    <string name="verification_code">enter verification code here..</string>
    <string name="send">Send</string>
    <string name="to_resend">doesn\'t get the code? <b>Resend</b></string>
    <string name="name">Rizka Ghinna Auliya</string>
    <string name="blood_type">Blood type : A</string>
    <string name="one_hundred">100</string>
    <string name="blood_received">Blood Received</string>
    <string name="seventy_five">75</string>
    <string name="blood_give">Blood Give</string>
    <string name="third_hundred_and_thirty">330</string>
    <string name="thanks">Thanks</string>
    <string name="search_donor">Search Donor</string>
    <string name="search_donor_desc">Search donor near you</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="blood_needed_desc">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="message_desc">5 New Messages</string>
    <string name="donor_history">Donor History</string>
    <string name="donor_history_desc">5 Gives, 2 Received</string>

    <string-array name="blood_type">
        <item>Blood Type</item>
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>

    <string-array name="reshus">
        <item>Reshus</item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>

    <string-array name="job">
        <item>Job</item>
        <item>Software Engineer</item>
        <item>PNS</item>
        <item>Doctor</item>
        <item>Etc</item>
    </string-array>

</resources>